--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -7,6 +7,14 @@
   border: solid 1px black;
   border-radius: 6px;
   padding: 12px;
+  background-color: beige;
+}
+.container:hover,
+.container:focus {
+  background-color: rgb(156, 155, 155);
+  .icon {
+    color: rgb(120, 238, 23);
+  }
 }
 
 .info {
@@ -18,13 +26,14 @@
   height: 24px;
   color: rgb(3, 3, 161);
 }
+
 .button {
   padding: 10px;
-  background-color: aqua;
+  background-color: rgb(129, 183, 245);
   color: rgb(214, 36, 36);
   font-weight: 700;
 }
 .button:hover,
 .button:focus {
-  background-color: aquamarine;
+  background-color: rgb(36, 85, 245);
 }
