--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -3,9 +3,10 @@
   text-decoration: none;
   padding: 12px;
   font-weight: 700;
-  color: #2a363b;
+  color: rgb(8, 23, 238);
 }
 
 .link.active {
-  color: #e84a5f;
+  color: #91071a;
+  text-decoration: underline;
 }
