--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -3,10 +3,14 @@
   text-decoration: none;
   padding: 12px;
   font-weight: 700;
-  color: rgb(8, 23, 238);
+  font-size: 20px;
+  color: #85c9e6;
 }
 
+.link:hover {
+  color: #1c31ee;
+}
 .link.active {
-  color: #91071a;
+  color: #f37d0e;
   text-decoration: underline;
 }
