--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,20 +1,38 @@
+.logo {
+  font-size: 16px;
+  display: flex;
+  color: #eedf07;
+  background-color: rgb(7, 7, 202);
+  padding: 10px;
+}
+.icon {
+  width: 20px;
+  height: 20px;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   margin-bottom: 16px;
   border-bottom: 1px solid #2a363b;
-  background-color: rgb(235, 220, 9);
+  background-color: rgb(114, 104, 62);
+  padding-left: 10px;
+  padding-right: 10px;
 }
-.logo {
-  display: flex;
-  color: rgb(8, 23, 238);
-}
+
 .logo p {
-  font-size: 24px;
-  font-weight: 700;
+  display: none;
 }
-.icon {
-  width: 30px;
-  height: 30px;
+@media screen and (min-width: 656px) {
+  .logo p {
+    display: inline;
+    font-size: 24px;
+    font-weight: 700;
+  }
+  .icon {
+    width: 30px;
+    height: 30px;
+  }
 }
