--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,39 +1,59 @@
-.container {
-  width: 400px;
+.contact {
+  padding: 10px;
   display: flex;
-  justify-content: space-between;
-  gap: 5px;
-  flex-wrap: wrap;
-  border: solid 1px black;
+  align-items: center;
+  background-color: #dadada;
   border-radius: 6px;
-  padding: 12px;
-  background-color: beige;
+  height: 80px;
 }
-.container:hover,
-.container:focus {
-  background-color: rgb(156, 155, 155);
-  .icon {
-    color: rgb(120, 238, 23);
-  }
+
+.contact:hover {
+  background-color: #d3d3d3;
+}
+
+.data {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .info {
-  display: flex;
-  gap: 10px;
-}
-.icon {
-  width: 24px;
-  height: 24px;
-  color: rgb(3, 3, 161);
+  color: #333;
 }
 
 .button {
-  padding: 10px;
-  background-color: rgb(129, 183, 245);
-  color: rgb(214, 36, 36);
-  font-weight: 700;
+  cursor: pointer;
+  border: none;
+  background-color: inherit;
 }
-.button:hover,
-.button:focus {
-  background-color: rgb(36, 85, 245);
+
+.infoIcon {
+  fill: #2a5cd1;
+  margin-right: 5px;
+  width: 18px;
+  height: 18px;
+}
+
+.bin {
+  width: 36px;
+  height: 36px;
+  fill: #dc0007;
+}
+
+.pencil {
+  width: 36px;
+  height: 36px;
+  fill: #0080dc;
+}
+
+.pencil:hover {
+  fill: #005089;
+}
+
+.bin:hover {
+  fill: #a90006;
+}
+
+.data {
+  margin-right: auto;
 }
