--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,6 +1,16 @@
-.container {
+.contactList {
+  list-style: none;
+  padding: 16px;
   display: flex;
+  gap: 0 20px;
+  justify-content: flex-start;
   flex-wrap: wrap;
-  gap: 20px;
-  padding: 0;
+}
+
+.contactItem {
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  background-color: #f1f1f1;
+  width: 355px;
 }
