--- a/src/components/EditContactForm/EditContactForm.module.css
+++ b/src/components/EditContactForm/EditContactForm.module.css
@@ -1,16 +1,16 @@
 .formContainer {
   margin-bottom: 20px;
   background-color: #9c9079;
-  width: 500px;
+  max-width: 500px;
   height: 250px;
   border-radius: 8px;
   padding: 20px;
 }
 
 .label {
+  color: #312e2e;
   display: block;
   margin-bottom: 5px;
-  color: #312e2e;
 }
 
 .inputField {
@@ -20,7 +20,6 @@
   border: 1px solid #ccc;
   border-radius: 4px;
 }
-
 .wrap {
   height: 60px;
   margin-bottom: 5px;
@@ -46,4 +45,23 @@
 
 .submitButton:hover {
   background-color: #0056b3;
+}
+.buttonContainer {
+  display: flex;
+  gap: 10px;
+}
+.submitButton:last-child {
+  background-color: orangered;
+}
+.submitButton:last-child:hover {
+  background-color: red;
+}
+
+.modal {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: #312e2e;
 }
