--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,9 +1,49 @@
-.form {
-  width: 320px;
+.formContainer {
+  margin: 0 auto;
+  margin-bottom: 20px;
+  background-color: #9c9079;
+  max-width: 500px;
+  height: 250px;
+  border-radius: 8px;
+  padding: 20px;
 }
 
 .label {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 16px;
+  color: #312e2e;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.inputField {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+.wrap {
+  height: 60px;
+  margin-bottom: 5px;
+}
+
+.errorMessage {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.submitButton {
+  display: block;
+  padding: 10px 30px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.submitButton:hover {
+  background-color: #0056b3;
 }
