--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -10,3 +10,11 @@
   font-size: 48px;
   text-align: center;
 }
+.icon {
+  padding: 0;
+  width: 60px;
+  height: 60px;
+  fill: rgb(235, 235, 25);
+  background-color: rgb(6, 6, 161);
+  margin-right: 20px;
+}
